[gd_scene load_steps=15 format=3 uid="uid://br2lov3ax036e"]

[ext_resource type="Texture2D" uid="uid://bdv53a2hn6wk4" path="res://assets/inventory_slot.png" id="1_4ekqm"]
[ext_resource type="PackedScene" uid="uid://w5dwni664mt0" path="res://scenes/InventorySlot.tscn" id="1_gt51p"]
[ext_resource type="Script" path="res://scripts/ShipInventory.gd" id="1_r0udg"]
[ext_resource type="FontFile" uid="uid://dcd1j55ctxhcr" path="res://fonts/Berylium/Berylium.ttf" id="2_tjqs3"]
[ext_resource type="PackedScene" uid="uid://b0h6kxq40smi6" path="res://scenes/UICloseButton.tscn" id="3_32gna"]
[ext_resource type="Theme" uid="uid://c4uxo8xq1upx0" path="res://LudumTheme.tres" id="4_4b4f3"]
[ext_resource type="FontFile" uid="uid://dihdof2wy1i5n" path="res://fonts/Berylium/Beryliumbold.ttf" id="7_fchlb"]
[ext_resource type="PackedScene" uid="uid://dlcm82atp4jcn" path="res://scenes/InventoryButton.tscn" id="8_thw4e"]

[sub_resource type="InputEventAction" id="InputEventAction_q38hb"]
action = &"inventory"

[sub_resource type="Shortcut" id="Shortcut_6v4t6"]
events = [SubResource("InputEventAction_q38hb")]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mq8d5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cay0u"]
content_margin_left = 20.0
content_margin_top = 5.0
content_margin_right = 20.0
content_margin_bottom = 5.0
draw_center = false

[sub_resource type="InputEventAction" id="InputEventAction_eiy5e"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_v5656"]
events = [SubResource("InputEventAction_eiy5e")]

[node name="ShipInventory" type="PanelContainer"]
process_mode = 3
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r0udg")

[node name="InventoryButton" parent="." instance=ExtResource("8_thw4e")]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
toggle_mode = true
shortcut = SubResource("Shortcut_6v4t6")

[node name="InventoryPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_mq8d5")

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Header" type="MarginContainer" parent="InventoryPanel/VBoxContainer"]
layout_mode = 2

[node name="Background" type="NinePatchRect" parent="InventoryPanel/VBoxContainer/Header"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_4ekqm")
region_rect = Rect2(0, 0, 64, 64)
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="InventoryPanel/VBoxContainer/Header"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cay0u")

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryPanel/VBoxContainer/Header/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="InventoryPanel/VBoxContainer/Header/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderLarge"
theme_override_fonts/font = ExtResource("2_tjqs3")
text = "Cargo Manifest"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UICloseButton" parent="InventoryPanel/VBoxContainer/Header/PanelContainer/HBoxContainer" instance=ExtResource("3_32gna")]
layout_mode = 2
shortcut = SubResource("Shortcut_v5656")

[node name="Body" type="HBoxContainer" parent="InventoryPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="InventorySlots" type="GridContainer" parent="InventoryPanel/VBoxContainer/Body"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 3

[node name="InventorySlot1" parent="InventoryPanel/VBoxContainer/Body/InventorySlots" node_paths=PackedStringArray("parent_inventory") instance=ExtResource("1_gt51p")]
layout_mode = 2
parent_inventory = NodePath("../../../../..")

[node name="InventorySlot2" parent="InventoryPanel/VBoxContainer/Body/InventorySlots" node_paths=PackedStringArray("parent_inventory") instance=ExtResource("1_gt51p")]
layout_mode = 2
parent_inventory = NodePath("../../../../..")

[node name="InventorySlot3" parent="InventoryPanel/VBoxContainer/Body/InventorySlots" node_paths=PackedStringArray("parent_inventory") instance=ExtResource("1_gt51p")]
layout_mode = 2
parent_inventory = NodePath("../../../../..")

[node name="InventorySlot4" parent="InventoryPanel/VBoxContainer/Body/InventorySlots" node_paths=PackedStringArray("parent_inventory") instance=ExtResource("1_gt51p")]
layout_mode = 2
parent_inventory = NodePath("../../../../..")

[node name="InventorySlot5" parent="InventoryPanel/VBoxContainer/Body/InventorySlots" node_paths=PackedStringArray("parent_inventory") instance=ExtResource("1_gt51p")]
layout_mode = 2
parent_inventory = NodePath("../../../../..")

[node name="InventorySlot6" parent="InventoryPanel/VBoxContainer/Body/InventorySlots" node_paths=PackedStringArray("parent_inventory") instance=ExtResource("1_gt51p")]
layout_mode = 2
parent_inventory = NodePath("../../../../..")

[node name="InventorySlot7" parent="InventoryPanel/VBoxContainer/Body/InventorySlots" node_paths=PackedStringArray("parent_inventory") instance=ExtResource("1_gt51p")]
layout_mode = 2
parent_inventory = NodePath("../../../../..")

[node name="InventorySlot8" parent="InventoryPanel/VBoxContainer/Body/InventorySlots" node_paths=PackedStringArray("parent_inventory") instance=ExtResource("1_gt51p")]
layout_mode = 2
parent_inventory = NodePath("../../../../..")

[node name="InventorySlot9" parent="InventoryPanel/VBoxContainer/Body/InventorySlots" node_paths=PackedStringArray("parent_inventory") instance=ExtResource("1_gt51p")]
layout_mode = 2
parent_inventory = NodePath("../../../../..")

[node name="InventorySlot10" parent="InventoryPanel/VBoxContainer/Body/InventorySlots" node_paths=PackedStringArray("parent_inventory") instance=ExtResource("1_gt51p")]
layout_mode = 2
parent_inventory = NodePath("../../../../..")

[node name="InventorySlot11" parent="InventoryPanel/VBoxContainer/Body/InventorySlots" node_paths=PackedStringArray("parent_inventory") instance=ExtResource("1_gt51p")]
layout_mode = 2
parent_inventory = NodePath("../../../../..")

[node name="InventorySlot12" parent="InventoryPanel/VBoxContainer/Body/InventorySlots" node_paths=PackedStringArray("parent_inventory") instance=ExtResource("1_gt51p")]
layout_mode = 2
parent_inventory = NodePath("../../../../..")

[node name="InventorySlot13" parent="InventoryPanel/VBoxContainer/Body/InventorySlots" node_paths=PackedStringArray("parent_inventory") instance=ExtResource("1_gt51p")]
layout_mode = 2
parent_inventory = NodePath("../../../../..")

[node name="InventorySlot14" parent="InventoryPanel/VBoxContainer/Body/InventorySlots" node_paths=PackedStringArray("parent_inventory") instance=ExtResource("1_gt51p")]
layout_mode = 2
parent_inventory = NodePath("../../../../..")

[node name="InventorySlot15" parent="InventoryPanel/VBoxContainer/Body/InventorySlots" node_paths=PackedStringArray("parent_inventory") instance=ExtResource("1_gt51p")]
layout_mode = 2
parent_inventory = NodePath("../../../../..")

[node name="Sidebar" type="MarginContainer" parent="InventoryPanel/VBoxContainer/Body"]
layout_mode = 2

[node name="Background" type="NinePatchRect" parent="InventoryPanel/VBoxContainer/Body/Sidebar"]
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_4ekqm")
region_rect = Rect2(0, 0, 64, 64)
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="InventoryPanel/VBoxContainer/Body/Sidebar"]
layout_mode = 2
theme = ExtResource("4_4b4f3")

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryPanel/VBoxContainer/Body/Sidebar/PanelContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="InventoryPanel/VBoxContainer/Body/Sidebar/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
theme_override_fonts/font = ExtResource("2_tjqs3")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryPanel/VBoxContainer/Body/Sidebar/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ValueHeader" type="Label" parent="InventoryPanel/VBoxContainer/Body/Sidebar/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderSmall"
theme_override_fonts/font = ExtResource("7_fchlb")
text = "Postage Fee:"

[node name="Value" type="Label" parent="InventoryPanel/VBoxContainer/Body/Sidebar/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
theme_override_fonts/font = ExtResource("2_tjqs3")

[node name="LocationHeader" type="Label" parent="InventoryPanel/VBoxContainer/Body/Sidebar/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
theme_override_fonts/font = ExtResource("7_fchlb")
text = "Port:"

[node name="Destination" type="RichTextLabel" parent="InventoryPanel/VBoxContainer/Body/Sidebar/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_type_variation = &"Calligraphy"

[node name="NotesHeader" type="Label" parent="InventoryPanel/VBoxContainer/Body/Sidebar/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
theme_override_fonts/font = ExtResource("7_fchlb")
text = "Notes:"

[node name="Description" type="RichTextLabel" parent="InventoryPanel/VBoxContainer/Body/Sidebar/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HandLettered"
fit_content = true
scroll_active = false

[connection signal="toggled" from="InventoryButton" to="." method="_on_inventory_button_toggled"]
[connection signal="pressed" from="InventoryPanel/VBoxContainer/Header/PanelContainer/HBoxContainer/UICloseButton" to="." method="_on_ui_close_button_pressed"]
